# python-inference-script

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  CMakeLists.txt  NOTICE.txt  README.md  cgmanifest.json
ci_build/: build_libtorch.yaml  build_pyis.house_keeping.yaml  build_pyis.linux.yaml  build_pyis.windows.yaml  build_pyis.yaml
cmake/: detect_python.cmake  handle_exception.cmake  handle_rtti.cmake
docs/: .buildinfo  README.html  conf.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: README.rst.txt
docs/backends/: cpython.html  cpython.rst  libtorch.html  libtorch.rst  native_cpp_library.html  onnxruntime.html
docs/dev/: build_from_source.html  build_from_source.rst  build_libtorch.html  house_keeping.html  why_we_build_pyis.html
docs/examples/: doc_cedar_trie.py  doc_foma_fst.py  doc_immutable_trie.py  doc_ort_session.py  doc_regex_featurizer.py  doc_text_feature_concat.py  doc_trie_generate_testset.py  doc_word_dict.py
docs/operators/: a_list_of_operators.html  bert_tokenizer.html  cedar_trie.html  foma.html  foma.rst  immutable_trie.html  lexicon_featurizer.html  lexicon_featurizer.rst  linear_chain_crf.html  (+8 more)
docs_src/: README.rst  index.rst  make.bat
docs_src/examples/cpp_library/: CMakeLists.txt
docs_src/examples/cpp_pyis_torch/: CMakeLists.txt
py/: CMakeLists.txt
pyis/: CMakeLists.txt
pyis/bindings/onnx/: CMakeLists.txt  onnx_base_kernel.cpp  onnx_base_kernel.h  onnx_exports.cpp  onnx_exports.h  onnx_tensor_dimensions.cpp  onnx_tensor_dimensions.h  pyis_onnx.def
pyis/bindings/onnx/language_detector/: language_detector_op.cpp  language_detector_op.h
pyis/bindings/onnx/tokenizers/: bert_tokenizer_op.cpp  bert_tokenizer_op.h
pyis/bindings/python/: CMakeLists.txt  bert_tokenizer_exports.cpp  cedar_trie_export.cpp  foma_fst_exports.cpp  gpt2_tokenizer_exports.cpp  immutable_trie_export.cpp  linear_chain_crf_exports.cpp  linear_svm_exports.cpp  model_context_exports.cpp  ort_session_exports.cpp  python_exports.cpp  text_featurizers_exports.cpp  trie_export.cpp  word_dict_exports.cpp
pyis/bindings/torch/: CMakeLists.txt  bert_tokenizer_exports.cpp  cedar_trie_exports.cpp  example_ort_exports.cpp  gpt2_tokenizer_exports.cpp  immutable_trie_exports.cpp  linear_chain_crf_exports.cpp  linear_svm_exports.cpp  model_context_exports.cpp  ort_session_exports.cpp  tensor_convertor.h  text_featurizers_exports.cpp  torch_exports.cpp  trie_exports.cpp  word_dict_exports.cpp
pyis/c_api/: CMakeLists.txt
pyis/c_api/cc/: pyis_c_api.cc
pyis/c_api/include/pyis/: pyis_c_api.h
pyis/ops/: CMakeLists.txt
pyis/ops/dnn/: dynamic_batch_manager.cpp  ort_cpu_session_impl.cpp  ort_cpu_session_impl.h  ort_inference_session.h  tensor.h
pyis/ops/example_op/: word_dict.cpp  word_dict.h
pyis/ops/example_ort/: language_detector.cpp  language_detector.h  naive_tokenizer.cpp  naive_tokenizer.h
pyis/ops/linear_chain_crf/: CMakeLists.txt  linear_chain_crf.cpp  linear_chain_crf.h  sparse_linear_chain_crf_api.cpp  sparse_linear_chain_crf_api.h
pyis/ops/linear_chain_crf/include/: AbstractFactory.h  CRFFactory.h  CommandFactory.h  ConsoleUtils.cpp  ConsoleUtils.h  Decode.cpp  Decode.h  ICommand.h  Learn.cpp  Learn.h  SupervisedLearnerFactory.h
pyis/ops/linear_chain_crf/src/: BaseSupervisedLearner.cpp  BaseSupervisedLearner.h  Common.h  CumulativeL1SGDLearner.cpp  CumulativeL1SGDLearner.h  DataFormatter.cpp  DataFormatter.h  FrenchVanillaCRF.cpp  FrenchVanillaCRF.h  ILinearChainCRF.h  LBFGSLearner.cpp  LBFGSLearner.h  LBFGSSolver.cpp  LBFGSSolver.h  PerceptronLearner.cpp  PerceptronLearner.h  Sentence.h  SparseLinearModel.cpp  SparseLinearModel.h  StreamDataManager.cpp  StreamDataManager.h  StringUtils.cpp  StringUtils.h  TagConstrainedCRF.cpp  TagConstrainedCRF.h  VanillaCRF.cpp  VanillaCRF.h  VectorUtils.h  Word.h
pyis/ops/linear_svm/: linear_svm.cpp  linear_svm.h
pyis/ops/ort_session/: ort_batch_context.h  ort_dym_batch_mgr.cpp  ort_dym_batch_mgr.h  ort_globals.cpp  ort_globals.h  ort_session.cpp  ort_session.h  ort_tensor_utils.cpp  ort_tensor_utils.h
pyis/ops/text/: cedar_trie.cpp  cedar_trie.h  foma_fst.cpp  foma_fst.h  immutable_trie.cpp  immutable_trie.h  ngram_featurizer.cpp  ngram_featurizer.h  regex_featurizer.cpp  regex_featurizer.h  text_feature.h  text_feature_concat.cpp  text_feature_concat.h  trie.cpp  trie.h
pyis/ops/tokenizer/: basic_tokenizer.cpp  basic_tokenizer.h  bert_tokenizer.cpp  bert_tokenizer.h  gpt2_tokenizer.cpp  gpt2_tokenizer.h  tokenizer_base.cpp  tokenizer_base.h  wordpiece_tokenizer.cpp  wordpiece_tokenizer.h
pyis/share/: CMakeLists.txt  binary_deserialize_helper.cpp  binary_deserialize_helper.h  binary_serialize_helper.cpp  binary_serialize_helper.h  binary_serialize_type.cpp  binary_serialize_type.h  cached_object.h  exception.h  expected.hpp  file_system.cpp  file_system.h  hardware_utils.cpp  hardware_utils.h  json_persist_helper.cpp  json_persist_helper.h  logging.cpp  logging.h  model_context.cpp  model_context.h  model_storage.cpp  model_storage.h  model_storage_local.cpp  model_storage_local.h  scope_guard.h  small_vector.h  str_utils.cpp  str_utils.h  ustring.cpp  ustring.h
tests/: CMakeLists.txt
tests/test_cedar_trie/: test_cedar_trie.cpp
tests/test_cedar_trie/data/: wordlist.txt
tests/test_foma_fst/: test_foma_fst.cpp
tests/test_foma_fst/data/: recognize_latin.fst
tests/test_immutable_trie/: test_immutable_trie.cpp
tests/test_ngram_featurizer/: test_ngram_featurizer.cpp
tests/test_ngram_featurizer/data/: ngram.txt
tests/test_ort_session/: gen_model.py  test_ort_session.cpp
tests/test_ort_session/data/: enus_emotion.onnx
tests/test_share/: test_binary_deserialize.cpp  test_binary_serialize.cpp  test_json_persisit_helper.cpp  test_json_persisit_helper_md5_ref.py  test_ops_cache.cpp
tests/test_share/data/: file_without_newline.for_cache_test.txt  word_dict.config.json
tools/: add_copyright.sh  copyright_py.txt  run-all-checks.sh  run-clang-format.py  run-clang-format.sh  run-clang-tidy.py  run-clang-tidy.sh  run-cmake-format.py
(+112 files in other folders)
